# JEAM

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  setup.py
.github/workflows/: docs.yml
api/: index.html
docs/: api.md  index.md  installation.md  usage.md
docs/notebooks/: 01_Quick_Start.ipynb  02_Design_Spesification.ipynb  03_Mixture_Models.ipynb  04_Custom_Mapping_Function.ipynb  05 - Collapsing Threshold Models.ipynb  05_Collapsing_Threshold_Models.ipynb
docs/tutorials/: 01_quickstart.md  02_design_spesification.md  03_mixture_models.md  04_custom_mapping_function.md  05_collapsing_threshold_models.md  collapsing_threshold_models.md  custom_mapping_function.md  design_spesification.md  mixture_models.md  quickstart.md
installation/: index.html
jeam/: __init__.py  version.py
jeam/Models/: Circular.py  HyperSpherical.py  Spherical.py
jeam/utility/: datasets.py  fpts.py  helpers.py  simulators.py
notebooks/: 01_Quick_Start.ipynb  04_Custom_Mapping_Function.ipynb
notebooks/01_Quick_Start/: 01_Quick_Start.ipynb  index.html
notebooks/02_Design_Spesification/: index.html
notebooks/03_Mixture_Models/: 03_Mixture_Models.ipynb  index.html
notebooks/04_Custom_Mapping_Function/: index.html
notebooks/05_Collapsing_Threshold_Models/: index.html
search/: search_index.json
site/: index.html
site/installation/: index.html
tests/: test_datasets.py  test_import.py
tutorials/01_quickstart/: index.html
tutorials/02_design_spesification/: index.html
usage/: index.html
(+20 files in other folders)
