[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "jeam"
version = "0.0.1"
description = "Evidence accumulation models for judgment and continuous-response decisions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Amir Hosein Hadian Rasanan", email = "amir.h.hadian@gmail.com" }
]

keywords = [
    "evidence accumulation",
    "diffusion models",
    "decision making",
    "cognitive modeling",
    "continuous response"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.58",
    "pandas>=2.0",
    "mpmath>=1.3"
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov"
]

docs = [
    "mkdocs",
    "mkdocs-material"
]

[project.urls]
Homepage = "https://github.com/AmirHoseinHadian/JEAM"
Documentation = "https://amirhoseinhadian.github.io/JEAM/"
Repository = "https://github.com/AmirHoseinHadian/JEAM"
Issues = "https://github.com/AmirHoseinHadian/JEAM/issues"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
jeam = ["data/*.csv"]
